// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should defaultNpmScriptsOrder 1`] = `
Object {
  "build": "12",
  "coverage": "17",
  "dev": "20",
  "install": "14",
  "link": "11",
  "lint": "16",
  "npm": "10",
  "pack": "5",
  "postpack": "4",
  "postpublish": "2",
  "prepack": "6",
  "prepare": "8",
  "prepublish": "9",
  "prepublishOnly": "7",
  "publish": "3",
  "restart": "19",
  "shrinkwrap": "1",
  "start": "21",
  "stop": "18",
  "test": "15",
  "uninstall": "13",
  "version": "0",
}
`;

exports[`should defaultNpmScriptsOrder 2`] = `
Array [
  "start",
  "dev",
  "restart",
  "stop",
  "coverage",
  "lint",
  "test",
  "install",
  "uninstall",
  "build",
  "link",
  "npm",
  "prepublish",
  "prepare",
  "prepublishOnly",
  "prepack",
  "pack",
  "postpack",
  "publish",
  "postpublish",
  "shrinkwrap",
  "version",
]
`;

exports[`should defaultNpmScriptsOrder 3`] = `
"{
  \\"start\\": \\"21\\",
  \\"dev\\": \\"20\\",
  \\"restart\\": \\"19\\",
  \\"stop\\": \\"18\\",
  \\"coverage\\": \\"17\\",
  \\"lint\\": \\"16\\",
  \\"test\\": \\"15\\",
  \\"install\\": \\"14\\",
  \\"uninstall\\": \\"13\\",
  \\"build\\": \\"12\\",
  \\"link\\": \\"11\\",
  \\"npm\\": \\"10\\",
  \\"prepublish\\": \\"9\\",
  \\"prepare\\": \\"8\\",
  \\"prepublishOnly\\": \\"7\\",
  \\"prepack\\": \\"6\\",
  \\"pack\\": \\"5\\",
  \\"postpack\\": \\"4\\",
  \\"publish\\": \\"3\\",
  \\"postpublish\\": \\"2\\",
  \\"shrinkwrap\\": \\"1\\",
  \\"version\\": \\"0\\"
}"
`;

exports[`should defaultNpmScriptsOrder 4`] = `
Object {
  "build": "9",
  "coverage": "4",
  "dev": "1",
  "install": "7",
  "link": "10",
  "lint": "5",
  "npm": "11",
  "pack": "16",
  "postpack": "17",
  "postpublish": "19",
  "prepack": "15",
  "prepare": "13",
  "prepublish": "12",
  "prepublishOnly": "14",
  "publish": "18",
  "restart": "2",
  "shrinkwrap": "20",
  "start": "0",
  "stop": "3",
  "test": "6",
  "uninstall": "8",
  "version": "21",
}
`;

exports[`should defaultNpmScriptsOrder 5`] = `
Array [
  "start",
  "dev",
  "restart",
  "stop",
  "coverage",
  "lint",
  "test",
  "install",
  "uninstall",
  "build",
  "link",
  "npm",
  "prepublish",
  "prepare",
  "prepublishOnly",
  "prepack",
  "pack",
  "postpack",
  "publish",
  "postpublish",
  "shrinkwrap",
  "version",
]
`;

exports[`should defaultNpmScriptsOrder 6`] = `
"{
  \\"start\\": \\"0\\",
  \\"dev\\": \\"1\\",
  \\"restart\\": \\"2\\",
  \\"stop\\": \\"3\\",
  \\"coverage\\": \\"4\\",
  \\"lint\\": \\"5\\",
  \\"test\\": \\"6\\",
  \\"install\\": \\"7\\",
  \\"uninstall\\": \\"8\\",
  \\"build\\": \\"9\\",
  \\"link\\": \\"10\\",
  \\"npm\\": \\"11\\",
  \\"prepublish\\": \\"12\\",
  \\"prepare\\": \\"13\\",
  \\"prepublishOnly\\": \\"14\\",
  \\"prepack\\": \\"15\\",
  \\"pack\\": \\"16\\",
  \\"postpack\\": \\"17\\",
  \\"publish\\": \\"18\\",
  \\"postpublish\\": \\"19\\",
  \\"shrinkwrap\\": \\"20\\",
  \\"version\\": \\"21\\"
}"
`;

exports[`should defaultNpmScriptsOrder v2 1`] = `
Object {
  "build": "12",
  "coverage": "17",
  "dev": "20",
  "install": "14",
  "link": "11",
  "lint": "16",
  "npm": "10",
  "pack": "5",
  "postbuild": "12",
  "postcoverage": "17",
  "postdev": "20",
  "postinstall": "14",
  "postlink": "11",
  "postlint": "16",
  "postnpm": "10",
  "postpack": "5",
  "postprepack": "6",
  "postprepare": "8",
  "postprepublish": "9",
  "postprepublishOnly": "7",
  "postpublish": "3",
  "postrestart": "19",
  "postshrinkwrap": "1",
  "poststart": "21",
  "poststop": "18",
  "posttest": "15",
  "postuninstall": "13",
  "postversion": "0",
  "prebuild": "12",
  "precoverage": "17",
  "predev": "20",
  "preinstall": "14",
  "prelink": "11",
  "prelint": "16",
  "prenpm": "10",
  "prepack": "6",
  "prepare": "8",
  "prepostpack": "4",
  "prepostpublish": "2",
  "prepublish": "9",
  "prepublishOnly": "7",
  "prerestart": "19",
  "preshrinkwrap": "1",
  "prestart": "21",
  "prestop": "18",
  "pretest": "15",
  "preuninstall": "13",
  "preversion": "0",
  "publish": "3",
  "restart": "19",
  "shrinkwrap": "1",
  "start": "21",
  "stop": "18",
  "test": "15",
  "uninstall": "13",
  "version": "0",
}
`;

exports[`should defaultNpmScriptsOrder v2 2`] = `
Array [
  "prestart",
  "start",
  "poststart",
  "predev",
  "dev",
  "postdev",
  "prerestart",
  "restart",
  "postrestart",
  "prestop",
  "stop",
  "poststop",
  "precoverage",
  "coverage",
  "postcoverage",
  "prelint",
  "lint",
  "postlint",
  "pretest",
  "test",
  "posttest",
  "preinstall",
  "install",
  "postinstall",
  "preuninstall",
  "uninstall",
  "postuninstall",
  "prebuild",
  "build",
  "postbuild",
  "prelink",
  "link",
  "postlink",
  "prenpm",
  "npm",
  "postnpm",
  "prepublish",
  "postprepublish",
  "prepare",
  "postprepare",
  "prepublishOnly",
  "postprepublishOnly",
  "prepack",
  "postprepack",
  "pack",
  "postpack",
  "prepostpack",
  "publish",
  "postpublish",
  "prepostpublish",
  "preshrinkwrap",
  "shrinkwrap",
  "postshrinkwrap",
  "preversion",
  "version",
  "postversion",
]
`;

exports[`should defaultNpmScriptsOrder v2 3`] = `
"{
  \\"prestart\\": \\"21\\",
  \\"start\\": \\"21\\",
  \\"poststart\\": \\"21\\",
  \\"predev\\": \\"20\\",
  \\"dev\\": \\"20\\",
  \\"postdev\\": \\"20\\",
  \\"prerestart\\": \\"19\\",
  \\"restart\\": \\"19\\",
  \\"postrestart\\": \\"19\\",
  \\"prestop\\": \\"18\\",
  \\"stop\\": \\"18\\",
  \\"poststop\\": \\"18\\",
  \\"precoverage\\": \\"17\\",
  \\"coverage\\": \\"17\\",
  \\"postcoverage\\": \\"17\\",
  \\"prelint\\": \\"16\\",
  \\"lint\\": \\"16\\",
  \\"postlint\\": \\"16\\",
  \\"pretest\\": \\"15\\",
  \\"test\\": \\"15\\",
  \\"posttest\\": \\"15\\",
  \\"preinstall\\": \\"14\\",
  \\"install\\": \\"14\\",
  \\"postinstall\\": \\"14\\",
  \\"preuninstall\\": \\"13\\",
  \\"uninstall\\": \\"13\\",
  \\"postuninstall\\": \\"13\\",
  \\"prebuild\\": \\"12\\",
  \\"build\\": \\"12\\",
  \\"postbuild\\": \\"12\\",
  \\"prelink\\": \\"11\\",
  \\"link\\": \\"11\\",
  \\"postlink\\": \\"11\\",
  \\"prenpm\\": \\"10\\",
  \\"npm\\": \\"10\\",
  \\"postnpm\\": \\"10\\",
  \\"prepublish\\": \\"9\\",
  \\"postprepublish\\": \\"9\\",
  \\"prepare\\": \\"8\\",
  \\"postprepare\\": \\"8\\",
  \\"prepublishOnly\\": \\"7\\",
  \\"postprepublishOnly\\": \\"7\\",
  \\"prepack\\": \\"6\\",
  \\"postprepack\\": \\"6\\",
  \\"pack\\": \\"5\\",
  \\"postpack\\": \\"5\\",
  \\"prepostpack\\": \\"4\\",
  \\"publish\\": \\"3\\",
  \\"postpublish\\": \\"3\\",
  \\"prepostpublish\\": \\"2\\",
  \\"preshrinkwrap\\": \\"1\\",
  \\"shrinkwrap\\": \\"1\\",
  \\"postshrinkwrap\\": \\"1\\",
  \\"preversion\\": \\"0\\",
  \\"version\\": \\"0\\",
  \\"postversion\\": \\"0\\"
}"
`;

exports[`sort base 1`] = `
Object {
  "multiply": "2 * 3",
  "postinstall": "echo \\"Installed\\"",
  "postprettier": "echo \\"so pretty\\"",
  "posttest": "abc",
  "pre-fetch-info": "foo",
  "prepare": "npm run build",
  "preprettier": "echo \\"not pretty\\"",
  "pretest": "xyz",
  "prettier": "prettier -l \\"**/*.js\\"",
  "prewatch": "echo \\"about to watch\\"",
  "start": "node server.js",
  "test": "node test.js",
  "watch": "watch things",
}
`;

exports[`sort base 2`] = `
Array [
  "start",
  "pretest",
  "test",
  "posttest",
  "postinstall",
  "prepare",
  "multiply",
  "preprettier",
  "prettier",
  "postprettier",
  "pre-fetch-info",
  "prewatch",
  "watch",
]
`;

exports[`sort base 3`] = `
"{
  \\"start\\": \\"node server.js\\",
  \\"pretest\\": \\"xyz\\",
  \\"test\\": \\"node test.js\\",
  \\"posttest\\": \\"abc\\",
  \\"postinstall\\": \\"echo \\\\\\"Installed\\\\\\"\\",
  \\"prepare\\": \\"npm run build\\",
  \\"multiply\\": \\"2 * 3\\",
  \\"preprettier\\": \\"echo \\\\\\"not pretty\\\\\\"\\",
  \\"prettier\\": \\"prettier -l \\\\\\"**/*.js\\\\\\"\\",
  \\"postprettier\\": \\"echo \\\\\\"so pretty\\\\\\"\\",
  \\"pre-fetch-info\\": \\"foo\\",
  \\"prewatch\\": \\"echo \\\\\\"about to watch\\\\\\"\\",
  \\"watch\\": \\"watch things\\"
}"
`;

exports[`sort base v2 1`] = `
Object {
  "_postprettier": "echo \\"so pretty\\"",
  "multiply": "2 * 3",
  "postinstall": "echo \\"Installed\\"",
  "posttest": "abc",
  "pre-fetch-info": "foo",
  "prepare": "npm run build",
  "preprettier_": "echo \\"not pretty\\"",
  "pretest": "xyz",
  "prettier_": "prettier -l \\"**/*.js\\"",
  "prewatch": "echo \\"about to watch\\"",
  "start": "node server.js",
  "test": "node test.js",
  "watch": "watch things",
}
`;

exports[`sort base v2 2`] = `
Array [
  "start",
  "pretest",
  "test",
  "posttest",
  "postinstall",
  "prepare",
  "preprettier_",
  "prettier_",
  "_postprettier",
  "multiply",
  "pre-fetch-info",
  "prewatch",
  "watch",
]
`;

exports[`sort base v2 3`] = `
"{
  \\"start\\": \\"node server.js\\",
  \\"pretest\\": \\"xyz\\",
  \\"test\\": \\"node test.js\\",
  \\"posttest\\": \\"abc\\",
  \\"postinstall\\": \\"echo \\\\\\"Installed\\\\\\"\\",
  \\"prepare\\": \\"npm run build\\",
  \\"preprettier_\\": \\"echo \\\\\\"not pretty\\\\\\"\\",
  \\"prettier_\\": \\"prettier -l \\\\\\"**/*.js\\\\\\"\\",
  \\"_postprettier\\": \\"echo \\\\\\"so pretty\\\\\\"\\",
  \\"multiply\\": \\"2 * 3\\",
  \\"pre-fetch-info\\": \\"foo\\",
  \\"prewatch\\": \\"echo \\\\\\"about to watch\\\\\\"\\",
  \\"watch\\": \\"watch things\\"
}"
`;

exports[`sort yarn-tool scripts 1`] = `
Object {
  "coverage": "npx nyc yarn run test",
  "lint": "npx eslint **/*.ts",
  "ncu": "npx yarn-tool ncu -u",
  "npm:publish": "npm publish",
  "postpublish_": "git commit -m \\"chore(release): publish\\" .",
  "prepublish:lockfile": "npx sync-lockfile .",
  "prepublishOnly_": "yarn run ncu && yarn run sort-package-json && yarn run test",
  "sort-package-json": "npx yarn-tool sort",
  "test": "echo \\"Error: no test specified\\" && exit 1",
  "test:mocha": "npx mocha --require ts-node/register \\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\"",
  "tsc:default": "tsc -p tsconfig.json",
  "tsc:esm": "tsc -p tsconfig.esm.json",
}
`;

exports[`sort yarn-tool scripts 2`] = `
Array [
  "coverage",
  "lint",
  "test",
  "test:mocha",
  "npm:publish",
  "prepublish:lockfile",
  "prepublishOnly_",
  "postpublish_",
  "ncu",
  "sort-package-json",
  "tsc:default",
  "tsc:esm",
]
`;

exports[`sort yarn-tool scripts 3`] = `
"{
  \\"coverage\\": \\"npx nyc yarn run test\\",
  \\"lint\\": \\"npx eslint **/*.ts\\",
  \\"test\\": \\"echo \\\\\\"Error: no test specified\\\\\\" && exit 1\\",
  \\"test:mocha\\": \\"npx mocha --require ts-node/register \\\\\\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\\\\\"\\",
  \\"npm:publish\\": \\"npm publish\\",
  \\"prepublish:lockfile\\": \\"npx sync-lockfile .\\",
  \\"prepublishOnly_\\": \\"yarn run ncu && yarn run sort-package-json && yarn run test\\",
  \\"postpublish_\\": \\"git commit -m \\\\\\"chore(release): publish\\\\\\" .\\",
  \\"ncu\\": \\"npx yarn-tool ncu -u\\",
  \\"sort-package-json\\": \\"npx yarn-tool sort\\",
  \\"tsc:default\\": \\"tsc -p tsconfig.json\\",
  \\"tsc:esm\\": \\"tsc -p tsconfig.esm.json\\"
}"
`;

exports[`sort yarn-tool scripts 4`] = `
Object {
  "_postpublish_": "git commit -m \\"chore(release): publish\\" .",
  "_prepublishOnly:": "yarn run ncu && yarn run sort-package-json && yarn run test",
  "coverage": "npx nyc yarn run test",
  "lint": "npx eslint **/*.ts",
  "ncu": "npx yarn-tool ncu -u",
  "npm:publish": "npm publish",
  "prepublish:lockfile": "npx sync-lockfile .",
  "sort-package-json": "npx yarn-tool sort",
  "test-": "echo \\"Error: no test specified\\" && exit 1",
  "test:mocha": "npx mocha --require ts-node/register \\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\"",
  "tsc:default": "tsc -p tsconfig.json",
  "tsc:esm": "tsc -p tsconfig.esm.json",
}
`;

exports[`sort yarn-tool scripts 5`] = `
Array [
  "coverage",
  "lint",
  "test-",
  "test:mocha",
  "npm:publish",
  "prepublish:lockfile",
  "_prepublishOnly:",
  "_postpublish_",
  "ncu",
  "sort-package-json",
  "tsc:default",
  "tsc:esm",
]
`;

exports[`sort yarn-tool scripts 6`] = `
"{
  \\"coverage\\": \\"npx nyc yarn run test\\",
  \\"lint\\": \\"npx eslint **/*.ts\\",
  \\"test-\\": \\"echo \\\\\\"Error: no test specified\\\\\\" && exit 1\\",
  \\"test:mocha\\": \\"npx mocha --require ts-node/register \\\\\\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\\\\\"\\",
  \\"npm:publish\\": \\"npm publish\\",
  \\"prepublish:lockfile\\": \\"npx sync-lockfile .\\",
  \\"_prepublishOnly:\\": \\"yarn run ncu && yarn run sort-package-json && yarn run test\\",
  \\"_postpublish_\\": \\"git commit -m \\\\\\"chore(release): publish\\\\\\" .\\",
  \\"ncu\\": \\"npx yarn-tool ncu -u\\",
  \\"sort-package-json\\": \\"npx yarn-tool sort\\",
  \\"tsc:default\\": \\"tsc -p tsconfig.json\\",
  \\"tsc:esm\\": \\"tsc -p tsconfig.esm.json\\"
}"
`;
